app/assets/stylesheets/layout.scss
/* ... */
.callout {
  font-size: $small-font-size;

  a {
    font-weight: bold;
    text-decoration: underline;
  }

  &.success, &.notice {
    background-color: $success-bg;
    border-color: $success-border;
    color: $color-success;
  }

  &.primary {
    background-color: $info-bg;
    border-color: $info-border;
    color: $color-info;
  }

  &.warning {
    background-color: $warning-bg;
    border-color: $warning-border;
    color: $color-warning;
  }

  &.alert, &.error {
    background-color: $alert-bg;
    border-color: $alert-border;
    color: $color-alert;
  }

  .close {
    text-decoration: none !important;
  }
}

span.error, small.error {
  background: $alert-bg;
  color: $color-alert;
}

span.no-error, small.no-error {
  background: $success-bg;
  color: $color-success;
}

.error small.error {
  background: $alert-bg;
  color: $color-alert;
  display: inline-block;
  margin: 0 $line-height/4;
}

label.error, label.error a {
  color: $color-alert;
}

// 08. User account
// ----------------

.account {

  select {
    height: $line-height*2;
    margin-right: $line-height/2;
  }

  .verify-account {
    padding-right: $line-height/2;
  }

  .final-votes-info {
    background: $warning-bg;
    border: 1px solid $warning-border;
    color: $color-warning;
    margin-top: $line-height;
    padding: $line-height/2;

    ul li {
      margin: $line-height/2 0;
    }

    .icon-box {
      color: #D4A26D;
      font-size: rem-calc(120);
      line-height: rem-calc(120);
      vertical-align: top;
    }
  }
}

img.avatar, img.admin-avatar, img.moderator-avatar, img.initialjs-avatar {
  border-radius: rem-calc(1000);
  position: relative;
}

.author-deleted, .user-deleted {
  color: rgba(0,0,0,.4);
  display: inline-block;
  font-size: rem-calc(32);
  line-height: rem-calc(32);
  height: rem-calc(32);
  vertical-align: top;
}

.user-permissions {

  p {
    span {
      color: $text-medium;
      font-size: rem-calc(12);
    }
  }

  ul {
    list-style-type: none;
    margin-bottom: 0;
    margin-left: 0;

    li {
      font-size: $small-font-size;
      margin-bottom: $line-height/2;

      span {
        color: $text-medium;
        font-size: rem-calc(12);
      }

      .icon-check {
        color: $check;
      }

      .icon-x {
        color: $delete;
      }
    }
  }
}

.notifications {
  position: relative;

  &:hover {
    text-decoration: none;
  }

  [class^="icon-"] {
    font-size: rem-calc(19);
    vertical-align: middle;
  }

  .icon-circle {
    color: #ecf00b;
    font-size: rem-calc(10);
    position: absolute;
    right: 8px;
    top: 6px;
  }
}

.notifications-list:before {
  background: $border;
  content: '';
  height: 100%;
  left: 22px;
  position: absolute;
  top: 60px;
  width: 2px;
}

.notification {
  display: block;
  padding: $line-height/2 0 $line-height/2 $line-height*1.5;
  position: relative;

  &:hover {

    a {
      text-decoration: none;
    }

    p:not(.time) {
      color: $link;
    }

    &:before {
      content: "\43";
    }
  }

  &:before {
    background: white;
    color: $brand;
    content: "\4d";
    font-family: "icons" !important;
    left: 0;
    position: absolute;
  }

  p {
    color: $text;
    margin-bottom: 0;
  }

  .time {
    font-size: $small-font-size;
    color: $text-medium;
  }
}

// 09. Search
// ----------

.search-results h2 {
  margin-bottom: 0;
}

.advanced-search {
  float: left;
  margin: $line-height 0;
  position: inherit;

  @include breakpoint(medium) {
    float: right;
    margin-bottom: 0;
    margin-top: rem-calc(28);
    position: absolute;
    right: 0;
    z-index: 2;
  }
}

.advanced-search-form {
  margin-top: $line-height;

  select {
    height: $line-height*2;
  }

  @include breakpoint(medium) {
    & > .column {
      padding: 0;
    }
  }
}

// 10. Officials levels
// --------------------

[class^="level-"] {
  color: white;
}

.is-author {
  background: #008CCF;
}

.is-association {
  background: #C0392B;
}

.level-1 {
  background: #1ABC9C;
}

.level-2, .level-3, .level-4 {
  background: #43AC6A;
}

.level-5 {
  background: #F08A24;
}

// 11. Tables
// ----------

table {
  border: $border;
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;

  th {
    background: #f8f9fb;
  }

  tr {

    td {
      line-height: $line-height;
      padding: $line-height/2 $line-height/4;
    }

    &:nth-child(odd) {
      background: white;
    }

    &:nth-child(even) {
      background: #fafcfb;
    }
  }

  .button {
    margin: 0;
  }
}

// 12. Social
// ----------

.button.button-twitter,
.button.button-facebook,
.button.button-google {
  height: $line-height*2;
  line-height: $line-height*2;
  padding: 0;
  position: relative;
}

.button.button-twitter {
  background: #45B0E3;

  &:before {
    content: "f";
    font-family: "icons" !important;
    font-size: rem-calc(24);
    left: 0;
    line-height: $line-height*2;
    padding: 0 rem-calc(20);
    position: absolute;
    top: 0;
  }
}

.ssb-twitter {
  background: #45B0E3;
  background-image: none !important;
  color: white;
  height: $line-height*2 !important;
  position: relative;
  width: $line-height*2 !important;

  &:before {
    content: "f";
    font-family: "icons" !important;
    font-size: rem-calc(24);
    left: 50%;
    line-height: $line-height*2;
    margin-left: rem-calc(-11);
    position: absolute;
    top: 0;
  }

  &:hover, &:focus {
    background: white;
    color: #40A2D1;
  }
}

.button.button-facebook {
  background: #3B5998;

  &:before {
    content: "A";
    font-family: "icons" !important;
    font-size: rem-calc(24);
    left: 0;
    line-height: $line-height*2;
    padding: 0 rem-calc(20);
    position: absolute;
    top: 0;
  }
}
/* ... */

